GAP-MINE alpha 2

--- a/python/src/classification.ipynb
+++ b/python/src/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "import os\n",
     "import pickle\n",
     "import itertools\n",
-    "from tqdm.notebook import tqdm\n",
+    "from tqdm.notebook import tqdm, tnrange\n",
     "import numpy as np\n",
     "from igraph import Graph\n",
     "from joblib import Parallel, delayed"
@@ -1991,7 +1991,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "id": "1055bf46-c2b6-4534-919e-0f8e786901e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "fe0d3bdb-fd12-473c-930b-db048a77c0f1",
    "metadata": {},
    "outputs": [],
@@ -2008,27 +2019,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b989f456-d3dc-4ca0-a9be-30d012a8645c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vip_scores = []\n",
-    "for module in tqdm(range(len(module_labels))):\n",
-    "    _, vips, _ = classifiers.feature_selection(X, y[:,module], module)\n",
-    "    vip_scores.append(vips)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "bffb87f5-cb47-4ea4-9a3f-c46bc3e94ae4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = Parallel(n_jobs=4)(\n",
-    "        delayed(classifiers.feature_selection)(X, y[:,module], module) for module in tqdm(range(len(module_labels)))\n",
-    "        )"
+    "importlib.reload(classifiers)\n",
+    "topfeatures = []\n",
+    "for module in tnrange(len(module_labels)):\n",
+    "    y_mod = y[:, module]\n",
+    "      \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "            X, y_mod, train_size=0.8, stratify=y_mod, random_state=0\n",
+    "            )\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train = scaler.fit_transform(X_train)\n",
+    "    \n",
+    "    features, _ = classifiers.feature_selection(X_train, y_train, module)\n",
+    "    topfeatures.append(features)"
    ]
   },
   {
@@ -2064,9 +2073,9 @@
     "    y = labels.to_numpy(dtype='int')\n",
     "    \n",
     "    ###################### Compute GAP-MINE ######################################################\n",
-    "    results = Parallel(n_jobs=18)(\n",
+    "    results = Parallel(n_jobs=12)(\n",
     "        delayed(classifiers.gapmine)(\n",
-    "            X, y, module, train_size=0.8, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=0\n",
+    "            X, y, module, train_size=0.8, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=42\n",
     "            ) for module in tqdm(range(len(module_labels)))\n",
     "        )\n",
     "    \n",
