GAP-MINE alpha 3 Added Oversampling of the minority class.

--- a/python/src/classification.ipynb
+++ b/python/src/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -1991,23 +1991,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "1055bf46-c2b6-4534-919e-0f8e786901e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "fe0d3bdb-fd12-473c-930b-db048a77c0f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "importlib.reload(classifiers)\n",
     "network_label='apid_huri'\n",
     "dataset_label='reactome'\n",
     "metrics = pd.read_csv(directories[network_label]['metrics'] + f\"{dataset_label}_rwr.csv\", header=0, index_col=0)\n",
@@ -2019,25 +2019,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "bffb87f5-cb47-4ea4-9a3f-c46bc3e94ae4",
+   "execution_count": 23,
+   "id": "5fc30525",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7c200338f49143909273fdc7c1c925f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model converged with random state 0.\n",
+      "Model converged with random state 1.\n",
+      "Model converged with random state 2.\n",
+      "Model converged with random state 3.\n",
+      "Model converged with random state 4.\n",
+      "Model converged with random state 5.\n",
+      "Model converged with random state 6.\n",
+      "Model converged with random state 7.\n",
+      "Model converged with random state 8.\n",
+      "Model converged with random state 9.\n"
+     ]
+    }
+   ],
    "source": [
-    "importlib.reload(classifiers)\n",
-    "topfeatures = []\n",
-    "for module in tnrange(len(module_labels)):\n",
-    "    y_mod = y[:, module]\n",
-    "      \n",
+    "y_mod = y[:, 25]\n",
+    "\n",
+    "for rng in tnrange(10):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y_mod, train_size=0.8, stratify=y_mod, random_state=0\n",
+    "            X, y_mod, train_size=0.8, stratify=y_mod, random_state=rng\n",
     "            )\n",
+    "    \n",
+    "    sm = SMOTE(random_state=42)\n",
+    "    X_train, y_train = sm.fit_resample(X_train, y_train)\n",
     "\n",
     "    scaler = StandardScaler()\n",
     "    X_train = scaler.fit_transform(X_train)\n",
     "    \n",
-    "    features, _ = classifiers.feature_selection(X_train, y_train, module)\n",
-    "    topfeatures.append(features)"
+    "    features, vips = classifiers.feature_selection(X_train, y_train, 25)\n",
+    "    if vips.shape[0]==0:\n",
+    "        print(f\"Model did not converge with random state {rng}.\")\n",
+    "    else:\n",
+    "        print(f\"Model converged with random state {rng}.\")"
    ]
   },
   {
@@ -2075,7 +2110,8 @@
     "    ###################### Compute GAP-MINE ######################################################\n",
     "    results = Parallel(n_jobs=12)(\n",
     "        delayed(classifiers.gapmine)(\n",
-    "            X, y, module, train_size=0.8, beta=1, false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=42\n",
+    "            X, y, module, train_size=0.8, beta=1, oversample=0.1, \n",
+    "            false_annotations=fa, shortest_paths=shortest_paths, graph=graph, random_state=42\n",
     "            ) for module in tqdm(range(len(module_labels)))\n",
     "        )\n",
     "    \n",
