GAP-MINE alpha 3

--- a/python/src/classification.ipynb
+++ b/python/src/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "id": "ebce7fbd",
    "metadata": {},
    "outputs": [],
@@ -14,6 +14,7 @@
     "import pickle\n",
     "import itertools\n",
     "from tqdm.notebook import tqdm, tnrange\n",
+    "from tqdm import contrib\n",
     "import numpy as np\n",
     "from igraph import Graph\n",
     "from joblib import Parallel, delayed"
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3997e8b6",
    "metadata": {},
    "outputs": [],
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "39bf8c8b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7f9ddd4b",
    "metadata": {},
    "outputs": [],
@@ -1991,19 +1992,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "1055bf46-c2b6-4534-919e-0f8e786901e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from imblearn.over_sampling import SMOTE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.combine import SMOTEENN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "fe0d3bdb-fd12-473c-930b-db048a77c0f1",
    "metadata": {},
    "outputs": [],
@@ -2019,94 +2021,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5fc30525",
+   "execution_count": 82,
+   "id": "8bf5d3e8-11a8-4cf2-8db8-3c18be0aaef3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apid_huri False reactome\n",
+      "apid_huri False disgenet_sca\n",
+      "apid_huri False disgenet_conservative\n",
+      "apid_huri True reactome\n",
+      "apid_huri True disgenet_sca\n",
+      "apid_huri True disgenet_conservative\n",
+      "string False reactome\n",
+      "string False disgenet_sca\n",
+      "string False disgenet_conservative\n",
+      "string True reactome\n",
+      "string True disgenet_sca\n",
+      "string True disgenet_conservative\n"
+     ]
+    }
+   ],
+   "source": [
+    "for dataset_label, network_label, fa in itertools.product(networks, false_annotations, datasets):\n",
+    "    print(dataset_label, network_label, fa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "c0013a38-b475-4172-9b02-7470c235751d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c200338f49143909273fdc7c1c925f5",
+       "model_id": "4a44f364d85f452e884a38bd69055574",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
+       "  0%|          | 0/417 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Model converged with random state 0.\n",
-      "Model converged with random state 1.\n",
-      "Model converged with random state 2.\n",
-      "Model converged with random state 3.\n",
-      "Model converged with random state 4.\n",
-      "Model converged with random state 5.\n",
-      "Model converged with random state 6.\n",
-      "Model converged with random state 7.\n",
-      "Model converged with random state 8.\n",
-      "Model converged with random state 9.\n"
+      "/home/rnasysbiolab1/GAP-MINE/venv/lib/python3.10/site-packages/joblib/externals/loky/process_executor.py:700: UserWarning:\n",
+      "\n",
+      "A worker stopped while some jobs were given to the executor. This can be caused by a too short worker timeout or by a memory leak.\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05e8884a7b20424cb33b1564ea525a69",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/285 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98e75bff901a4b6993d8fe7e42edd81e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/301 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "y_mod = y[:, 25]\n",
+    "network_label = 'string'\n",
+    "fa = False\n",
     "\n",
-    "for rng in tnrange(10):\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(\n",
-    "            X, y_mod, train_size=0.8, stratify=y_mod, random_state=rng\n",
-    "            )\n",
-    "    \n",
-    "    sm = SMOTE(random_state=42)\n",
-    "    X_train, y_train = sm.fit_resample(X_train, y_train)\n",
+    "############### load data #############################\n",
+    "if fa:\n",
+    "    fa_label = '_fa_'\n",
+    "    graph = Graph.Read_GML(directories[network_label]['graph'] + \"graph.gml\")\n",
+    "    shortest_paths = np.array(graph.distances())\n",
     "\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train = scaler.fit_transform(X_train)\n",
+    "else:\n",
+    "    fa_label = '_'\n",
+    "    graph = None\n",
+    "    shortest_paths = None\n",
     "    \n",
-    "    features, vips = classifiers.feature_selection(X_train, y_train, 25)\n",
-    "    if vips.shape[0]==0:\n",
-    "        print(f\"Model did not converge with random state {rng}.\")\n",
-    "    else:\n",
-    "        print(f\"Model converged with random state {rng}.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "faa2209a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "importlib.reload(classifiers)\n",
-    "for dataset_label, network_label, fa in itertools.product(datasets, networks, false_annotations):\n",
+    "for dataset_label in datasets:\n",
     "    \n",
-    "    ############### load data #############################\n",
-    "    if fa:\n",
-    "        fa_label = '_fa_'\n",
-    "        graph = Graph.Read_GML(directories[network_label]['graph'] + \"graph.gml\")\n",
-    "        shortest_paths = np.array(graph.distances())\n",
-    "\n",
-    "    else:\n",
-    "        fa_label = '_'\n",
-    "        graph = None\n",
-    "        shortest_paths = None\n",
-    "        \n",
     "    metrics = pd.read_csv(directories[network_label]['metrics'] + f\"{dataset_label}_rwr.csv\", header=0, index_col=0)\n",
-    "\n",
+    "    \n",
     "    labels = pd.read_csv(directories[network_label]['labels'] + f\"{dataset_label}.csv\", header=0, index_col=0)   \n",
     "    \n",
     "    ####################### Prepare data #######################################################\n",
-    "\n",
+    "    \n",
     "    module_labels = metrics.columns.to_list()\n",
-    "\n",
+    "    \n",
     "    X = metrics.to_numpy()\n",
     "    y = labels.to_numpy(dtype='int')\n",
     "    \n",
+    "    importlib.reload(classifiers)\n",
     "    ###################### Compute GAP-MINE ######################################################\n",
     "    results = Parallel(n_jobs=12)(\n",
     "        delayed(classifiers.gapmine)(\n",
@@ -2120,13 +2150,13 @@
     "    clf_results = pd.DataFrame([i[1] for i in results])\n",
     "    clf_results['target_module'] = module_labels\n",
     "    clf_models = [i[2] for i in results]\n",
-    "\n",
+    "    \n",
     "    ###################### Save Results ###########################################################\n",
     "    gapmine_dir = directories[network_label]['models'] + 'gapmine/'\n",
     "    check_dir(gapmine_dir)\n",
     "    clf_results.to_csv(gapmine_dir + f'{dataset_label}{fa_label}results.csv', index=False)\n",
     "    cv_results.to_csv(gapmine_dir + f'{dataset_label}{fa_label}cv.csv', index=False)\n",
-    "\n",
+    "    \n",
     "    with open(gapmine_dir + f\"{dataset_label}{fa_label}models.pckl\", \"wb\") as f:\n",
     "        for model in clf_models:\n",
     "            pickle.dump(model, f)"
